--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>{{data}} en welkom bij {{title}}</h1>
-<h1>{{num==100}}</h1>
-<h1 class = {{data}}>{{data}} en welkom bij Angular</h1>
+<app-header-cmp></app-header-cmp>
+<app-header-cmp></app-header-cmp>
+<app-user-list></app-user-list>
