--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1>{{data}} en welkom bij {{title}}</h1>
+<app-header></app-header>
+<p>{{data}} en welkom bij {{title}}.
+In dit project leer ik de basis van angular zodat ik er beter mee kan werken.</p>
+
+
