--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,11 +1,9 @@
 <body>
     <nav>
         <ul>
-            <li>
-                <a class= "active" href="app.component.html">Home</a>
-                <a href="app.component.html">Contact</a>
-                <a href="app.component.html">Afbeeldingen</a>
-            </li>
+            <li><a class= "active" href="app.component.html">Home</a></li>
+            <li><a href="app.component.html">Contact</a></li>
+            <li><a href="app.component.html">Afbeeldingen</a></li>
         </ul>
     </nav>
 </body>
