--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<app-top-bar></app-top-bar>
 <p>{{data}} en welkom bij {{title}}.
 In dit project leer ik de basis van angular zodat ik er beter mee kan werken.</p>
 
