--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,9 +1,10 @@
-<body>
+<link rel="style" href="top-bar.component.css">
+<body class="top-bar">
     <nav>
         <ul>
-            <li><a class= "active" href="app.component.html">Home</a></li>
-            <li><a href="app.component.html">Contact</a></li>
-            <li><a href="app.component.html">Afbeeldingen</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Afbeeldingen</a></li>
         </ul>
     </nav>
 </body>
