--- a/src/app/top-bar/top-bar.component.css
+++ b/src/app/top-bar/top-bar.component.css
@@ -1,5 +1,11 @@
-.top-bar{
+ul {
+    list-style-type: none;
     margin: 0;
-    color: rgb(167, 167, 167);
-}
+    padding: 0;
+  }
+  
+  li {
+    display: inline;
+  }
+
 
