--- a/src/app/top-bar/top-bar.component.css
+++ b/src/app/top-bar/top-bar.component.css
@@ -2,10 +2,29 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    overflow: hidden;
+    background-color:rgb(172, 172, 172);
   }
   
   li {
-    display: inline;
+    float: right;
   }
 
+  li a{
+      display: block;
+      padding: 10px;
+      text-align: center;
+      color: black;
+      padding: 5px 100px;
+  }
+
+  li a:hover:not(.active) {
+    background-color: rgb(66, 66, 66);
+    color:white;
+  }
+
+  li a.active{
+      color: white;
+      background-color: rgb(66, 66, 66);
+  }
 
