--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -4,6 +4,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">Afbeeldingen</a></li>
+        <li><a href="#">Video</a></li>
     </ul>
 </nav>
 
