--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <app-top-bar></app-top-bar>
 <p>{{data}} en welkom bij {{title}}.
 In dit project leer ik de basis van angular zodat ik er beter mee kan werken.</p>
+<div style="background-image: url('site-background.jpg');"></div>
 
 
