--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,2 +1,4 @@
-<p> {{titel}}en welkom bij.
-    in dit project leer ik de basis van angular zodat ik er beter mee kan werken.</p>
+
+<p> {{titel}} en welkom {{data}}
+    In dit project leer ik de basis van angular zodat ik er beter mee kan werken.
+</p>
