--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,4 +1,6 @@
-
+<div class="background-image"></div>
+<div class="content">
 <p> {{titel}} en welkom {{data}}
     In dit project leer ik de basis van angular zodat ik er beter mee kan werken.
 </p>
+</div>
