--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,5 @@
-<h1 class="header">Website over het project</h1>
+<div class="image"></div>
+<div class="head">
+<h1 class="header">New York</h1>
+</div>
+
