--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,4 @@
-<div class="image"></div>
-<div class="head">
-<h1 class="header">New York</h1>
-</div>
-
+<div class="header">
+    <img src="assets/NYvlag.png" alt="Flag"/>
+    <h1>New York</h1>
+  </div>
