--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 body{
     margin: 0px;
-    color:white;
+    color:black;
 }
 
 .background-image{
@@ -12,11 +12,7 @@ body{
     background-image: url('assets/NYCity.jpg');
     width: 1925px;
     height: 865px;
-    -webkit-filter: blur(5px);
-    -moz-filter: blur(5px);
-    -o-filter: blur(5px);
-    -ms-filter: blur(5px);
-    filter: blur(2px);
+    filter: opacity(30%);
     
 }
 
