--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -2,7 +2,7 @@
 <nav>
     <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.component.html">Contact</a></li>
         <li><a href="#">Afbeeldingen</a></li>
         <li><a href="#">Video</a></li>
     </ul>
