--- a/src/styles.css
+++ b/src/styles.css
@@ -4,16 +4,19 @@ body{
 }
 
 .background-image{
-    position: fixed;
-    left: 0;
-    right: 0;
-    z-index: 1;
+
     display: block;
     background-image: url('assets/NYCity.jpg');
-    width: 1925px;
-    height: 865px;
+    width: 100%;
+
     filter: opacity(30%);
-    
+    /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .content {
