--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,6 +1,10 @@
 <div class="background-image"></div>
 <div class="content">
-<p> {{titel}} en welkom {{data}}
-    In dit project leer ik de basis van angular zodat ik er beter mee kan werken.
-</p>
+    <h2>
+        Omgeving
+    </h2>
+    New York is gelegen in de gelijknamige staat in het noordoosten van de VS. De stad is gesitueerd aan de Hudson River die uitmond in de Atlantische oceaan.
+    Door ondermeer dit geografisch voordeel is New York kunnen uitgroeien tot wereldhandelsstad. Het grootste gedeelte van de stad is gebouwd op de eilanden Manhattan, Staten Island en Long Island.
+    Het tekort aan ruimte om uit te breiden zorgt voor een 
+
 </div>
