--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -4,7 +4,10 @@
         Omgeving
     </h2>
     New York is gelegen in de gelijknamige staat in het noordoosten van de VS. De stad is gesitueerd aan de Hudson River die uitmond in de Atlantische oceaan.
-    Door ondermeer dit geografisch voordeel is New York kunnen uitgroeien tot wereldhandelsstad. Het grootste gedeelte van de stad is gebouwd op de eilanden Manhattan, Staten Island en Long Island.
-    Het tekort aan ruimte om uit te breiden zorgt voor een 
+    Door ondermeer dit geografisch voordeel is New York kunnen uitgroeien tot wereldhandelsstad. Het grootste gedeelte van de stad is gebouwd op de eilanden Manhattan, 
+    Staten Island en Long Island.Het tekort aan ruimte om uit te breiden zorgt voor een heel erg hoge bevolkingsdichtheid. 
+    De totale landoppervlakte van New York is 789,43 km² terwijl in werkelijkheid de totale oppervlakte van New York 1214,4 km² bedraagt.
+    
+
 
 </div>
